Modifications to build on S4.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,8 @@ if(WW3)
   set(WW3_COMP ${CMAKE_Platform})
   if(${CMAKE_Platform} STREQUAL "hera.intel")
     set(WW3_COMP "hera")
+  elseif(${CMAKE_Platform} STREQUAL "s4.intel")
+    set(WW3_COMP "s4")
   endif()
   message("Build WW3:")
   message("   run: ${CMAKE_BUILD_TOOL} WW3_PARCOMPN=4 WW3_COMP=${WW3_COMP} ww3_nems")
